fix align

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -12,6 +12,11 @@ h2 {
     justify-content: center;
 }
 
+h3{
+    margin-left: 2vw;
+   
+}
+
 a {
     color: white;
     text-decoration: none;
@@ -28,9 +33,8 @@ p {
 }
 
 .bloc {
-
-    margin: 10px;
-    padding: 10px;
+    margin-bottom: 5%;
+    padding: 30px;
 }
 
 #people {
@@ -68,6 +72,8 @@ body {
     font-family: Verdana;
     margin-bottom: 2%;
     
+    
+    
 }
 
 img {
@@ -87,12 +93,15 @@ header {
 
 }
 img{
+    
     margin-bottom: 5%;
+    border-radius: 5%;
 }
 
 .logo {
     width: auto;
     height: 100%;
+    margin-left: 1vw;
 }
 
 .lienlogo {
